--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,9 @@ dist: trusty
 
 jobs:
   include:
-    - stage: build docker server image
+    - stage: build docker image
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker build -t skywalking-e2e-server server
-        - docker tag skywalking-e2e-server kezhenxu94/skywalking-e2e-server:latest
-        - docker push kezhenxu94/skywalking-e2e-server:latest
-    - stage: build docker client image
-      script:
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker build -t skywalking-e2e-client client
-        - docker tag skywalking-e2e-client kezhenxu94/skywalking-e2e-client:latest
-        - docker push kezhenxu94/skywalking-e2e-client:latest
+        - docker build -t e2e-container .
+        - docker tag e2e-server skyapm/e2e-container:1.0.0
+        - docker push skyapm/e2e-container:1.0.0
