Add dynamic tag of image

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ dist: trusty
 
 jobs:
   include:
-    - if: branch = master AND tag IS present
+    - if: tag IS present
       stage: build docker image
       script:
         - docker build -t e2e-container .
-        - docker tag e2e-container skyapm/e2e-container:1.0.0
+        - docker tag e2e-container skyapm/e2e-container:${TRAVIS_TAG}
         - docker images
