Add JDK9+ images (#5)
* Add container for JDK9+

* Try to build images in PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,46 @@ dist: trusty
 
 jobs:
   include:
+    - stage: try build docker images
+      script:
+        - docker build -f Dockerfile-JDK8 -t e2e-container:jdk8 .
+        - docker build -f Dockerfile-JDK9 -t e2e-container:jdk9 .
+        - docker build -f Dockerfile-JDK11 -t e2e-container:jdk11 .
+        - docker build -f Dockerfile-JDK12 -t e2e-container:jdk12 .
+        - docker images
+
     - if: tag IS present
-      stage: build docker image
+      stage: build and deploy docker image for JDK8
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker build -t e2e-container .
-        - docker tag e2e-container skyapm/e2e-container:${TRAVIS_TAG}
+        - docker build -f Dockerfile-JDK8 -t e2e-container-jdk8 .
+        - docker tag e2e-container-jdk8 skyapm/e2e-container:jdk8-${TRAVIS_TAG}
         - docker images
-        - docker push skyapm/e2e-container:${TRAVIS_TAG}
+        - docker push skyapm/e2e-container:jdk8-${TRAVIS_TAG}
+
+    - if: tag IS present
+      stage: build and deploy docker image for JDK9
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -f Dockerfile-JDK9 -t e2e-container-jdk9 .
+        - docker tag e2e-container-jdk9 skyapm/e2e-container:jdk9-${TRAVIS_TAG}
+        - docker images
+        - docker push skyapm/e2e-container:jdk9-${TRAVIS_TAG}
+
+    - if: tag IS present
+      stage: build and deploy docker image for JDK11
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -f Dockerfile-JDK10 -t e2e-container-jdk11 .
+        - docker tag e2e-container-jdk11 skyapm/e2e-container:jdk11-${TRAVIS_TAG}
+        - docker images
+        - docker push skyapm/e2e-container:jdk11-${TRAVIS_TAG}
+
+    - if: tag IS present
+      stage: build and deploy docker image for JDK12
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -f Dockerfile-JDK12 -t e2e-container-jdk12 .
+        - docker tag e2e-container-jdk12 skyapm/e2e-container:jdk12-${TRAVIS_TAG}
+        - docker images
+        - docker push skyapm/e2e-container:jdk12-${TRAVIS_TAG}
